# BST-accesses

./: AccessRecord.h  BST_accesses  BinarySearchTree.h  BitacoraOrdenada.txt  CMakeLists.txt  IP.cpp  IP.h  LogManager.cpp  LogManager.h  Node.h  README.md  Register.cpp  Register.h  SplayTree.h  bitacora_ordenada.txt  main.cpp
